crates/excelx-derive/tests/ui/missing_order.stderr
error: missing #[excel(order = ...)]
 --> tests/ui/missing_order.rs:5:5
  |
5 | /     #[excel(header = "ID")]
6 | |     id: i64,
  | |___________^
